build: add Dockerfile and requirements.txt for Django app

--- a/templates/forms/main.html
+++ b/templates/forms/main.html
@@ -36,7 +36,7 @@
                 <option value="indicacao">Indicação</option>
                 <option value="outros">Outros</option>
             </select>
-            <input type="text" name="motivo" class="form-control" placeholder="Porque você quer entrar? Maximo 100 linhas, quer digitar tanto por que? id="form-sobre-voce" maxlength="100">
+            <input type="text" name="motivo" class="form-control" placeholder="Porque você quer entrar? Maximo 100 linhas, quer digitar tanto por que?" maxlength="100">
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
     </main>
